feat: fix getUserById implementation and move general swagger definition into main.go
